# swagger-spec.json
@@ -234,6 +234,38 @@
           "Guides"
         ]
       }
+    },
+    "/guide/{id}": {
+      "get": {
+        "operationId": "getGuideById",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GuideDto"
+                }
+              }
+            }
+          }
+        },
+        "summary": "",
+        "tags": [
+          "Guide",
+          "Guides"
+        ]
+      }
     }
   },
   "info": {
